--- a/nigus-appp/src/components/Footer.css
+++ b/nigus-appp/src/components/Footer.css
@@ -1,6 +1,6 @@
 .footer {
     background-color: #fdf8f8;
-    color: #5a8bf3;
+    color: #1fd2b4;
     padding: 50px 0;
     margin-top: 250px;
   }
