--- a/nigus-appp/src/App.css
+++ b/nigus-appp/src/App.css
@@ -2,4 +2,5 @@
     padding-left: 50px;
     padding-right: 50px;
     padding-top: 30px;
+    background-image: linear-gradient(to bottom right, aquamarine, rgb(23, 26, 25)); 
 }
