--- a/nigus-appp/src/components/Product.css
+++ b/nigus-appp/src/components/Product.css
@@ -1,39 +1,46 @@
-/* ProductsPage.css */
-
 .products-page {
-    padding: 20px;
-  }
-  
-  .products-page h2 {
-    font-size: 24px;
-    margin-bottom: 20px;
-  }
-  
-  .products-container {
-    display: flex;
-    flex-wrap: wrap;
-  }
-  
-  .product {
-    width: calc(33.33% - 20px);
-    margin: 10px;
-    padding: 20px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    text-align: center;
-  }
-  
-  .product img {
-    width: 50%;
-    border-radius: 5px;
-  }
-  
-  .product h3 {
-    font-size: 18px;
-    margin-bottom: 10px;
-  }
-  
-  .product p {
-    font-size: 14px;
-  }
-  
+  padding: 20px;
+}
+
+.products-page h2 {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.products-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.product {
+  width: calc(33.33% - 20px);
+  margin: 10px;
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  text-align: center;
+  background-color: aliceblue;
+  transition: transform 0.3s ease; 
+}
+
+.product:hover {
+  transform: scale(1.55); 
+}
+
+.product img {
+  width: 50%;
+  border-radius: 5px;
+}
+
+.product h3 {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.product p {
+  font-size: 14px;
+}
+
+.cp12 {
+  margin-top: 10px;
+}
