--- a/nigus-appp/src/components/Footer.css
+++ b/nigus-appp/src/components/Footer.css
@@ -1,50 +1,69 @@
+/* Footer.css */
+
 .footer {
-    background-color: #fdf8f8;
-    color: #1fd2b4;
-    padding: 50px 0;
-    margin-top: 250px;
-  }
-  
-  .container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 15px;
-  }
-  
-  .footer-content {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .footer-logo img {
-    width: 100px; 
-  }
-  
-  .footer-links ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-   margin-left: 30px;
-  }
-  
-  .footer-links ul li {
-    display: inline-block;
-    margin-right: 20px;
-  }
-  
-  .footer-links ul li a {
-    color: #423f3f;
-    text-decoration: none;
-  }
-  
-  .social-icons a {
-    color: #2a2727;
-    text-decoration: none;
-    margin-right: 10px;
-  }
-  
-  .social-icons a:hover {
-    color: #ccc;
-  }
-  
+  background-color: #fdf8f8;
+  color: #1fd2b4;
+  padding: 50px 0;
+  margin-top: 250px;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.footer-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer-logo img {
+  width: 100px; 
+}
+
+.footer-links ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  margin-left: 30px;
+}
+
+.footer-links ul li {
+  display: inline-block;
+  margin-right: 20px;
+  position: relative; /* Add relative positioning */
+}
+
+.footer-links ul li a {
+  color: #423f3f;
+  text-decoration: none;
+  position: relative;
+}
+
+/* Add popup effect */
+.footer-links ul li a::after {
+  content: '';
+  position: absolute;
+  bottom: -5px; /* Adjust as needed */
+  left: 50%;
+  width: 0;
+  height: 2px;
+  background-color: #1fd2b4;
+  transition: width 0.3s ease, left 0.3s ease; /* Add transition for smooth effect */
+}
+
+.footer-links ul li a:hover::after {
+  width: 100%;
+  left: 0;
+}
+.social-icons a {
+  color: #2a2727;
+  text-decoration: none;
+  margin-right: 10px;
+}
+
+.social-icons a:hover {
+  color: #ccc;
+}
