--- a/nigus-appp/src/components/Header.css
+++ b/nigus-appp/src/components/Header.css
@@ -1,107 +1,128 @@
 
-.header {
-    background-color: #ffffff;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-    padding: 20px 0;
-    position: relative;
-  z-index: 9999;
-  }
-  
-  .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 20px;
-  }
-  
-  .logo {
-    font-size: 24px;
-    font-weight: bold;
-    color: #5edb9d;
-  }
-  
-  .nav-links a {
-    margin-right: 20px;
-    text-decoration: none;
-    color: #333333;
-    transition: color 0.3s ease;
-  }
-  
-  .nav-links a:hover {
-    color: #007bff;
-  }
-  
-  .cta-btn button {
-    background-color: #5edb9d;
-    color: #ffffff;
-    border: none;
-    padding: 10px 20px;
-    font-size: 16px;
-    font-weight: bold;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  .cta-btn button:hover {
-    background-color: #3e3f41;
-  } 
 
-  
+.header {
+  background-color: #ffffff;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 20px 0;
+  position: relative;
+  z-index: 9999;
+}
+
+.fixed {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+.container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+.logo {
+  font-size: 24px;
+  font-weight: bold;
+  color: #5edb9d;
+}
+
+.nav-links {
+  display: flex;
+  align-items: center;
+}
+
+.nav-links a {
+  margin-right: 20px;
+  text-decoration: none;
+  color: #333333;
+  position: relative; 
+}
+
+.nav-links a:hover {
+  color:  #19d5ee;
+}
+
 .dropdown {
-    position: relative;
-    display: inline-block;
+  position: relative;
+}
+
+.dropbtn {
+  background-color: transparent;
+  color: #333333;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  padding-right: 20px;
+}
+
+.dropbtn::after {
+  content: "\25BC";
+  position: absolute;
+  top: 50%;
+  right: 5px;
+  transform: translateY(-50%);
+  color: #999999;
+  transition: transform 0.3s ease; 
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 10000;
+  opacity: 0; 
+  transform: scale(0.8); 
+  transition: opacity 0.3s ease, transform 0.3s ease; 
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+  opacity: 1; 
+  transform: scale(1); 
+  animation: popUp 0.3s ease; 
+}
+
+@keyframes popUp {
+  0% {
+    transform: scale(0.8);
   }
-  
-  
-  .dropbtn {
-    background-color: transparent;
-    color: #333333;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-    position: relative; 
-    padding-right: 20px; 
+  100% {
+    transform: scale(1);
   }
-  
-  
-  .dropbtn::after {
-    content: "\25BC"; 
-    position: absolute;
-    top: 50%;
-    right: 5px; 
-    transform: translateY(-50%);
-    color: #999999; 
-  }
-  
-  
-  .dropdown-content {
-    display: none;
-    position:absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 10000;
-  }
-  
-  
-  .dropdown-content a {
-    color: #333333;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    align-items: center;
-    text-align: center;
-  }
-  
-  
-  .dropdown-content a:hover {
-    background-color: #ddd;
-  }
-  
-  
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
-  
+}
+
+.dropdown-content a {
+  color: #333333;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  align-items: center;
+  text-align: center;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+.cta-btn button {
+  background-color: #5edb9d;
+  color: #ffffff;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  font-weight: bold;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease; 
+}
+
+.cta-btn button:hover {
+  background-color: #3e3f41;
+}
